# btmm-ai-scanner

./: .gitignore  pyproject.toml
docs/: PROJECT_SCOPE.md  PROJECT_STATE.md
docs/architecture/: DATA_CONTRACTS_AND_SCHEMA_PLAN.md  DETERMINISTIC_TESTING_AND_FIXTURE_PLAN.md  PHASE_1A_SOFTWARE_FOUNDATION_ARCHITECTURE.md  PHASE_1B_AUTHOR_DECISION_REGISTER.md  PHASE_1B_EXACT_SCAFFOLD_FILE_SCOPE.md  PROVENANCE_VALIDATION_AND_AUDIT_PLAN.md  REPOSITORY_SCAFFOLD_PLAN.md
knowledge/: AMBIGUITIES_REQUIRING_AUTHOR_DECISION.md  FINAL_PHASE_0G_KNOWLEDGE_GAP_AUDIT.md  KNOWLEDGE_COMPLETION_GATE.md  MEASUREMENT_STANDARDS.md  POI_COVERAGE_MATRIX.md  POI_MASTER_CATALOG.md  SOURCE_INDEX.md
knowledge/btmm/: BTMM_MASTER_SUMMARY.md  BTMM_STATE_MACHINE.md
knowledge/market_structure/: MARKET_ANALYSIS_COVERAGE_MATRIX.md
knowledge/poi_lifecycle/: BLOCKED_CANDLESTICK_POI_COMPLETION_AUDIT.md  CONDITIONAL_LIFECYCLE_RECONCILIATION_AUDIT.md  POI_BOUNDARY_BREACH_RECLAIM_INVALIDATION.md  POI_FRESHNESS_AND_AGE_STANDARD.md  POI_LIFECYCLE_APPLICABILITY_AUDIT.md
knowledge/poi_rules/price_action/: bearish_engulfing.md  bullish_engulfing.md  evening_star.md  hammer.md  morning_star.md  shooting_star.md
knowledge/poi_rules/structural/: bearish_trendline.md  bullish_trendline.md  support.md  (+17 more)
src/btmm_ai_scanner/: __init__.py
tests/: test_config_precedence.py  test_import_smoke.py
tests/unit/: test_identity_and_fingerprint.py  test_manifest_compatibility_classes.py  test_normalized_candle_contract.py  test_provenance_record.py  test_raw_candle_contract.py  test_semver.py  test_validation_result.py
(+21 files in other folders)
