[build-system]
requires = ["uv_build>=0.11.30,<0.12"]
build-backend = "uv_build"

[project]
name = "btmm-ai-scanner"
version = "0.1.0"
description = "Deterministic software foundation for the BTMM and POI AI scanner."
authors = [
    { name = "Bellforex" },
]
requires-python = ">=3.12,<3.13"
dependencies = []
license = "LicenseRef-Proprietary"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Private :: Do Not Upload",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1,<10",
    "mypy>=2.3.0,<3",
    "ruff>=0.15.22,<0.16",
]

[tool.uv]
required-version = "==0.11.30"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true

[tool.pytest]
minversion = "9.1"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--import-mode=importlib",
]
